syntax = "proto3";

package ai.metathings.service.deviced;
option go_package = "github.com/nayotta/metathings/proto/deviced";

import "model.proto";

message AddFirmwareDescriptorToFirmwareHubRequest {
	OpFirmwareHub firmware_hub = 1;
	OpFirmwareDescriptor firmware_descriptor = 2;
}
